功能修复与调整